# linux_frame_aware_sched

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  bundle.json  frameaware.gni
common/include/: frame_info_const.h  rme_constants.h  rme_log_domain.h  rme_scoped_trace.h  rtg_interface.h  single_instance.h
common/src/: rme_scoped_trace.cpp
frameworks/core/frame_aware_collector/include/: frame_msg_mgr.h  frame_scene_sched.h  frame_window_mgr.h  intelli_sense_sched.h  rme_core_sched.h  rme_scene_sched.h
frameworks/core/frame_aware_collector/src/: frame_msg_mgr.cpp  frame_window_mgr.cpp  rme_core_sched.cpp  rme_scene_sched.cpp
frameworks/core/frame_aware_policy/include/: app_info.h  app_info_mgr.h  intellisense_server.h  para_config.h  rtg_msg_mgr.h
frameworks/core/frame_aware_policy/src/: app_info.cpp  app_info_mgr.cpp  intellisense_server.cpp  para_config.cpp  rtg_msg_mgr.cpp
interfaces/inner_api/: qos.h
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/frameintf/: BUILD.gn  frame_msg_intf.cpp  frame_msg_intf.h  frame_trace.cpp  frame_trace.h  frame_ui_intf.cpp  frame_ui_intf.h  rtg_interface.cpp
profiles/: hwrme.xml
qos_manager/: BUILD.gn
qos_manager/include/: qos_common.h
qos_manager/src/: qos_common.cpp  qos_manager.cpp
test/: BUILD.gn
test/unittest/phone/: frame_msg_intf_test.cpp  frame_ui_intf_test.cpp  intellisense_server_test.cpp  qos_manager_test.cpp  rtg_interface_test.cpp
