# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../frameaware.gni")

config("frame_ui_intf_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "./",
    "../../../common/include",
    "../../../frameworks/core/frame_aware_collector/include",
  ]
}

config("frame_trace_intf_config") {
  visibility = [ ":*" ]
  include_dirs = [ "./" ]
}

config("rtg_interface_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "./",
    "../../../common/include",
  ]
}

ohos_shared_library("frame_trace_intf") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "frame_trace.cpp" ]

  cflags = [ "-fstack-protector-strong" ]

  public_configs = [ ":frame_trace_intf_config" ]

  subsystem_name = "resourceschedule"
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "frame_aware_sched"
}

ohos_shared_library("frame_ui_intf") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "../../../frameworks/core/frame_aware_collector/src/frame_msg_mgr.cpp",
    "../../../frameworks/core/frame_aware_collector/src/frame_window_mgr.cpp",
    "../../../frameworks/core/frame_aware_collector/src/rme_core_sched.cpp",
    "../../../frameworks/core/frame_aware_collector/src/rme_scene_sched.cpp",
    "frame_ui_intf.cpp",
    "rtg_interface.cpp",
  ]

  cflags = [
    "-Wno-shift-negative-value",
    "-fstack-protector-strong",
  ]

  configs = [ ":frame_ui_intf_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "resourceschedule"
  part_name = "frame_aware_sched"
}

config("frame_msg_intf_config") {
  visibility = [ ":*" ]
  visibility += [ "../../../test/*" ]

  include_dirs = [
    "./",
    "../../../frameworks/core/frame_aware_policy/include",
    "../../../common/include",
    "../../../qos_manager/include",
  ]
}

ohos_shared_library("frame_msg_intf") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "../../../frameworks/core/frame_aware_policy/src/app_info.cpp",
    "../../../frameworks/core/frame_aware_policy/src/intellisense_server.cpp",
    "../../../frameworks/core/frame_aware_policy/src/para_config.cpp",
    "../../../qos_manager/src/qos_common.cpp",
    "frame_msg_intf.cpp",
    "rtg_interface.cpp",
  ]

  cflags = [
    "-Wno-shift-negative-value",
    "-fstack-protector-strong",
  ]

  public_configs = [ ":frame_msg_intf_config" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "libxml2:libxml2",
  ]

  subsystem_name = "resourceschedule"
  part_name = "frame_aware_sched"
}

ohos_shared_library("rtg_interface") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "rtg_interface.cpp" ]

  cflags = [
    "-Wno-shift-negative-value",
    "-fstack-protector-strong",
  ]

  public_configs = [ ":rtg_interface_config" ]

  include_dirs = [ "../../../common/include" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog",
  ]

  install_enable = true
  subsystem_name = "resourceschedule"
  part_name = "frame_aware_sched"
}
